[package]
name = "smart_garden"
version = "0.1.0"
authors = ["vmasdani <valianmasdani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
chrono = "0.4.9"
machine-ip = "0.2.1"
qrcode = { version = "0.8", default-features = false }
linux-embedded-hal = "0.2.2"
embedded-graphics = "0.4.9"
ssd1306 = "0.2.6"
mosquitto-client = "0.1.5"
sqlite = "0.25.0"

[dependencies.wiringpi]
version="0.2"
features = ["orangepi"]

[profile.release]
codegen-units=1
