[package]
name = "smart_garden"
version = "0.1.0"
authors = ["vmasdani <valianmasdani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.9"
machine-ip = "0.2.1"
qrcode = { version = "0.8", default-features = false }
linux-embedded-hal = "0.2.2"
# embedded-graphics = "0.4.9"
embedded-graphics = "0.6.2"
ssd1306 = "0.3.1"
# mosquitto-client = "0.1.5"
# sqlite = "0.25.0"
# async-std = "1.5.0"
# futures = "0.3.5"
paho-mqtt = "0.7.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
gpio-cdev = "0.2"
image = "0.23.4"

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]

[dependencies.wiringpi]
version="0.2"
features = ["orangepi"]

[profile.release]
codegen-units=1
